tests/NormalTests/paczka1/fuzzy1/89383057.err
Error in line 1: N3aiinSz S700 54,9
Error in line 8: r0sRO S700 24,37
Error in line 7: 7dhuhQnY S700 44,2
Error in line 18: r0sRO A320 71,9
Error in line 17: A751 S881 34,4
Error in line 19: r0sRO S881 31,0
Error in line 23: 7dhuhQnY A7A1 A2,6
Error in line 35: A751 S881 95,7
